# EduSynapseOS

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
config/agents/: assessor.yaml  companion.yaml  comprehension_evaluator.yaml  diagnostician.yaml  emotional_analyzer.yaml  learning_tutor_general.yaml  learning_tutor_geography.yaml  learning_tutor_history.yaml  learning_tutor_math.yaml  learning_tutor_science.yaml  practice_helper_tutor_general.yaml  practice_helper_tutor_geography.yaml  practice_helper_tutor_history.yaml  practice_helper_tutor_math.yaml  practice_helper_tutor_science.yaml  report_generator.yaml  session_analyzer.yaml  system_explainer.yaml  teacher_companion.yaml  tutor.yaml
config/agents/content/: advisor.yaml  content_modifier.yaml  content_reviewer.yaml  content_translator.yaml  game_content_generator.yaml  learning_content_generator.yaml  media_generator.yaml  orchestrator.yaml  quiz_generator.yaml  vocabulary_generator.yaml
config/agents/games/: checkers_coach.yaml  chess_coach.yaml  connect4_coach.yaml  gomoku_coach.yaml  othello_coach.yaml
config/diagnostics/: recommendations.yaml  thresholds.yaml
config/h5p-locales/_common/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/arithmetic-quiz/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/branching-scenario/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/course-presentation/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/crossword/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/dialog-cards/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/documentation-tool/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/drag-words/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/essay/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/fill-blanks/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/flashcards/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/image-pairing/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/image-sequencing/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/interactive-book/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/mark-words/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/memory-game/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/multiple-choice/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/personality-quiz/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/question-set/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/single-choice-set/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/sort-paragraphs/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/summary/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/true-false/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-locales/word-search/: ar.json  en.json  es.json  fr.json  tr.json
config/h5p-schemas/: README.md  content-types.json
config/h5p-schemas/assessment/: arithmetic-quiz.json  drag-words.json  (+8 more)
config/llm/: providers.yaml
config/personas/: coach.yaml  companion.yaml  friend.yaml  mentor.yaml  socratic.yaml  system_explainer.yaml  teacher_assistant.yaml  tutor.yaml
config/theories/: bloom.yaml  mastery.yaml  scaffolding.yaml  socratic.yaml  spaced_repetition.yaml  vark.yaml  zpd.yaml
docs/: api.md  architecture.md  configuration.md  deployment.md
scripts/: content-test.sh  init-central-db.sql  init-tenant-db.sql  seed_uk_curriculum.sql  test_content_creation.sh
src/: __init__.py
src/api/: __init__.py  app.py  dependencies.py
src/core/: __init__.py
src/domains/: __init__.py
src/infrastructure/: __init__.py
src/tools/: __init__.py  loader.py  manifest.py
src/utils/: __init__.py  datetime.py  logging.py
tests/: __init__.py  conftest.py  e2e_multilang_content_test.py  qc_content_creation_test.py  qc_scenarios_test.py  test_l10n_multilang.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_academic_years_api.py  test_agent_execution.py  test_auth_middleware.py  test_classes_api.py  test_content_creation_api.py  test_learning_api.py  test_llm_client.py  test_mcp_server.py  test_parent_relations_api.py  test_postgres_connection.py  test_practice_api.py  test_qdrant_connection.py  test_redis_connection.py  test_schools_api.py  test_tenant_container.py  test_workflow_checkpointing.py
tests/unit/: __init__.py  test_academic_year_service.py  test_assignment_service.py  test_capabilities.py  test_class_service.py  test_dynamic_agent.py  test_educational_theories.py  test_embedding_service.py  test_enrollment_service.py  test_jwt.py  test_memory_layers.py  test_memory_manager.py  test_parent_relation_service.py  test_password.py  test_persona_system.py  test_practice_service.py  test_practice_workflow.py  test_rag.py  test_school_service.py  test_settings.py  test_tutoring_workflow.py  test_yaml_loader.py
(+424 files in other folders)
